[package]
name = "hypract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyprland = "0.3.6"
anyhow = {version = "1", features = ["backtrace"]}
tokio = {version = "1", features = ["full"]}
serde = { version = "1", features = ["derive"] }
simd-json = "0.10"
clap = {version = "4", features = ["derive", "cargo"]}
xdg = "2"
snmalloc-rs = "0.3.4"
