[package]
name = "hypract-anyrun"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyrun-plugin = { git = "https://github.com/Kirottu/anyrun" }
hypract = { path = "../" }
abi_stable = "0.11.1"
tokio = {version ="1", features = ["full"]}
serde = {version = "1", features = ["derive"]}
ron = "0.8"
fuzzy-matcher = "0.3"
hyprland = "0.3.7"
